# chainsafe-challenge

./: .env.sample  .gitignore  Cargo.toml  Makefile  README.md  message.txt
contracts/: CidStore.sol  abi  bytecode
src/: main.rs
