[package]
name = "technical-exercise"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
dotenv = "0.15.0"
ipfs-api = "0.11.0"
tokio = { version = "1.0.0", features = ["full"] } #NOTE features can probably be shrunk down
web3 = "0.17.0"

